# ContextGraphAI

./: .dockerignore  .gitignore  Dockerfile  README.md  ai_coding_session_log.md  pyproject.toml  requirements.txt  sap_o2c.db  start.sh
src/: check_columns.py  ingest_data.py
src/api/: main.py
src/core/: graph_manager.py  query_engine.py
src/ui/: app.py
